--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -49,6 +49,7 @@ ClientProfilePage:
   mt4_button: "//div[@class='mt4_act_box']"
   link_trading_account: "//div[@class='link_field']/a[@class='before_nw' and contains(text(),'%s')]"
   balance_in_trading_account: "//*[@id='dtlview_Balance']"
+  account_number: "(//tr[@class='lvtColData'])[1]//td[1]"
 CRMClientDeposit:
   i_confirm_checkbox: "//*[@name='confirm']"
 ConvertLeadModule:
@@ -84,6 +85,9 @@ CreateLeadsProfilePage:
   save_button: "//input[@title='Save [Alt+S]']"
 CRMHomePage:
   leads_module_btn: "//span[@class='glyphicon glyphicon-Leads']"
+DragonPage:
+  number_text: "//div[@title='Click to Call']"
+  number_color_red: "//div[@title='Click to Call' and contains(@style,'color: red')]"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
@@ -114,6 +118,15 @@ MT4DepositModule:
 MT4WithdrawModule:
   create_withdraw_button: "//button[contains(text(),'Create')]"
   comment_filed: "//input[@id='transaction_comment']"
+MT4CreditInModule:
+  amount_filed: "//input[@id='amount']"
+  description_filed: "//input[@id='transaction_comment']"
+  create_button: "//button[contains(text(),'Create')]"
+MT4CreditOutModule:
+  amount_filed: "//input[@id='amount']"
+  granted_by_filed: "//input[@id='transaction_grantedBy']"
+  comment_filed: "//input[@id='transaction_comment']"
+  create_button: "//button[contains(text(),'Create')]"
 TradingAccountsInformationPage:
   balance_text: "//td[contains(text(),'Balance')]//following-sibling::td[1]"
 WebTraderPage:
