--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
@@ -17,3 +17,6 @@ brands:
 
 #- name: itrader_global
 #  config_file: itrader_global.yml
+
+- name: etfinance
+  config_file: etfinance.yml
