--- a/src/test/python/resources/config/Brands/moneta.yml
+++ b/src/test/python/resources/config/Brands/moneta.yml
@@ -1,6 +1,6 @@
 pretty_name: "Moneta"
 url: "https://monetamarkets.ptscrm.com/"
-url_ca: "https://monetamarkets.pandats.com/#/"
+url_ca: "https://www.monetamarkets.com/#/"
 otp_secret: IZOUBSYILPRJBXMZ
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
