--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,115 +1,118 @@
 brands:
 
-- name: axa_markets
-  config_file: axa_markets.yml
+- name: newcrmui
+  config_file: newcrmui.yml
 
-- name: aztrades
-  config_file: aztrades.yml
-
-- name: brokerz
-  config_file: brokerz.yml
-
-- name: bots
-  config_file: bots.yml
-
-- name: b-finance
-  config_file: b-finance.yml
-
-- name: b-traderfx
-  config_file: b-traderfx.yml
-
-- name: coinstec
-  config_file: coinstec.yml
-
-- name: eafx
-  config_file: eafx.yml
-
-- name: forexbestmarket
-  config_file: forexbestmarket.yml
-
-- name: firstindex
-  config_file: firstindex.yml
-
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
-
-- name: gxfx
-  config_file: gxfx.yml
-
-- name: hizlifx
-  config_file: hizlifx.yml
-
-- name: herdos
-  config_file: herdos.yml
-
-- name: jonesmutual
-  config_file: jonesmutual.yml
-
-- name: kontofx
-  config_file: kontofx.yml
-
-- name: libramarkets
-  config_file: libramarkets.yml
-
-- name: marketsplus
-  config_file: marketsplus.yml
-
-- name: mpcrypto
-  config_file: mpcrypto.yml
-
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
-
-- name: newforexqa2
-  config_file: newforexqa2.yml
-
-- name: optionstars
-  config_file: optionstars.yml
-
-- name: olympusmarkets
-  config_file: olympusmarkets.yml
-
-- name: privat-trade
-  config_file: privat-trade.yml
-
-- name: ptbanc
-  config_file: ptbanc.yml
-
-- name: q8
-  config_file: q8.yml
-
-- name: royal_cfds
-  config_file: royal_cfds.yml
-
-- name: solocapitlas
-  config_file: solocapitlas.yml
-
-- name: safemarkets
-  config_file: safemarkets.yml
-
-- name: swiftcfd
-  config_file: swiftcfd.yml
-
-- name: tradospot
-  config_file: tradospot.yml
-
-- name: tfxgo
-  config_file: tfxgo.yml
-
-- name: uft
-  config_file: uft.yml
-
-- name: uprofx
-  config_file: uprofx.yml
-
-- name: xtraderfx
-  config_file: xtraderfx.yml
-
-- name: 2mercados
-  config_file: 2mercados.yml
-
-- name: 4xfx
-  config_file: 4xfx.yml
-
-- name: 24btcmarket
-  config_file: 24btcmarket.yml
+#- name: axa_markets
+#  config_file: axa_markets.yml
+#
+#- name: aztrades
+#  config_file: aztrades.yml
+#
+#- name: brokerz
+#  config_file: brokerz.yml
+#
+#- name: bots
+#  config_file: bots.yml
+#
+#- name: b-finance
+#  config_file: b-finance.yml
+#
+#- name: b-traderfx
+#  config_file: b-traderfx.yml
+#
+#- name: coinstec
+#  config_file: coinstec.yml
+#
+#- name: eafx
+#  config_file: eafx.yml
+#
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
+#
+#- name: firstindex
+#  config_file: firstindex.yml
+#
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#
+#- name: gxfx
+#  config_file: gxfx.yml
+#
+#- name: hizlifx
+#  config_file: hizlifx.yml
+#
+#- name: herdos
+#  config_file: herdos.yml
+#
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#
+#- name: kontofx
+#  config_file: kontofx.yml
+#
+#- name: libramarkets
+#  config_file: libramarkets.yml
+#
+#- name: marketsplus
+#  config_file: marketsplus.yml
+#
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
+#
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+#
+#- name: newforexqa2
+#  config_file: newforexqa2.yml
+#
+#- name: optionstars
+#  config_file: optionstars.yml
+#
+#- name: olympusmarkets
+#  config_file: olympusmarkets.yml
+#
+#- name: privat-trade
+#  config_file: privat-trade.yml
+#
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#
+#- name: q8
+#  config_file: q8.yml
+#
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+#
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
+#
+#- name: safemarkets
+#  config_file: safemarkets.yml
+#
+#- name: swiftcfd
+#  config_file: swiftcfd.yml
+#
+#- name: tradospot
+#  config_file: tradospot.yml
+#
+#- name: tfxgo
+#  config_file: tfxgo.yml
+#
+#- name: uft
+#  config_file: uft.yml
+#
+#- name: uprofx
+#  config_file: uprofx.yml
+#
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
+#
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#
+#- name: 4xfx
+#  config_file: 4xfx.yml
+#
+#- name: 24btcmarket
+#  config_file: 24btcmarket.yml
