--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,10 +1,10 @@
 tests_config:
 
 ######################################## FILTERS TESTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-#  class: FilterModulesTest
+#- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
+#  class: TestFiltersUI
 #  tests:
-#    - test_create_filter_clients_module
+#    - test_filter_clients_ui
 
 ########################################## LEADS ###################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
