--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,13 +1,13 @@
 tests_config:
 
 ######################################## FILTERS TESTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
-#  class: TestFiltersUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
+  class: TestFiltersUI
+  tests:
 #    - test_filter_clients_ui
 #    - test_filter_leads_ui
 #    - test_filter_documents_ui
-#    - test_filter_help_desk_ui
+    - test_filter_help_desk_ui
 
 ########################################## LEADS ###################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
@@ -82,18 +82,18 @@ tests_config:
 #    - test_add_delete_event_ui
 
 ############################################# CA TESTS ##############################################
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
-    - test_check_email_sign_up
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_check_email_sign_up
 #    - test_registred_client_in_crm_new_ui
 #
-- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-  class: AddNewAccountTestCA
-  tests:
-    - test_add_live_account_ca
-    - test_add_demo_account_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
 #    - test_verify_accounts_in_crm_ui
 #    - test_switch_between_accounts_ca
 #
