--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -38,8 +38,8 @@ brands:
 - name: marketrip
   config_file: marketrip.yml
 
-- name: moneta
-  config_file: moneta.yml
+#- name: moneta
+#  config_file: moneta.yml
 
 - name: newrichmarkets
   config_file: newrichmarkets.yml
