--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -65,14 +65,14 @@ brands:
 #- name: marketrip
 #  config_file: marketrip.yml
 
-- name: moneta
-  config_file: moneta.yml
+#- name: moneta
+#  config_file: moneta.yml
 
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
+- name: newforexstage2
+  config_file: newforexstage2.yml
 
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
