--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,13 +1,24 @@
 tests_config:
 
-######################################## FILTERS TESTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
-  class: TestFiltersUI
+###################################### MY DASHBOARD TESTS ########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
+  class: TestMyDashboardUI
   tests:
+#    - test_my_dashboard_edit_event_ui
+    - test_my_dashboard_email_ui
+#    - test_sms_icon
+#    - test_sorting_columns
+#    - test_searching_by_columns
+
+######################################## FILTERS TESTS ###############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
+#  class: TestFiltersUI
+#  tests:
 #    - test_filter_clients_ui
 #    - test_filter_leads_ui
 #    - test_filter_documents_ui
-    - test_filter_help_desk_ui
+#    - test_filter_help_desk_ui
+#    - test_filter_ta_ui
 
 ########################################## LEADS ###################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
